<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.tulupov.alex.testapplication.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_URL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/urlSite"
                android:inputType="textWebEditText"
                />

            <Button
                android:id="@+id/btn_show_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showHTMLText"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_views_top"
                />

            <TextView
                android:id="@+id/tv_HTML_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_views_top"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
